# SecureFileAccess

./: CMakeLists.txt  README.md
include/: SecureFileAccess.h
src/: SecureFileAccess.cpp  main.cpp
